[package]
name = "metrics-board-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iota-sdk = { git = "https://github.com/iotaledger/iota-sdk", branch = "develop" }
tokio = { version = "1.22.0", features = [ "full" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16.0"
thiserror = "1.0.44"
dotenv = "0.15"
anyhow = "1.0.70"
chrono = "0.4"
rand = "0.8"